--- a/Styles/style.css
+++ b/Styles/style.css
@@ -13,3 +13,205 @@
       "slnt" 0,
       "wdth" 100; */
   }
+
+  body{
+    background-color: #f5f8ff;
+    margin:  auto;
+    font-family: Raleway;
+    /* font-family: sans-serif; */
+    font-weight: 400;
+}
+button{
+    border: none;
+}
+button:hover{
+    color: rgb(255, 255, 255);
+    background-color: rgb(238, 123, 8);
+    transition: 0.5s;
+    box-shadow: 5px 5px 1px rgb(217, 213, 213);
+}
+
+
+/* primary class*/
+
+.primary-button{
+    background-color: #4E47FF;
+    color: white;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+}
+.logo{
+    color: #4e47ff;
+    font-size: 50px;
+}
+
+
+/* nav section style*/
+nav{
+    display: flex;
+    justify-content: space-between;
+}
+.logo1{
+  text-align: center;
+  margin: 10px 40px;
+  }
+.signup{
+    padding: 10px 20px;
+    height: 40px;
+    margin: 20px 40px;
+}
+
+.banner-main{
+    height: 400px;
+    padding: 30px 40px;
+    background-image: url(/B12A01-landing-launchpad/Assets/Hero-bg.png);
+    text-align: center;
+   
+}
+.baner{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+.baner h1{
+    margin-top: 100px;
+    font-size: 40px;
+    width: 500px;
+}
+.bn-btn{
+    display: flex;
+    justify-content: center;
+}
+.stayfocused{
+    padding: 10px 15px;
+    display: block;
+}
+
+
+/*------action section-----*/
+.act{
+    display: flex;
+    justify-content: center;
+}
+.action{
+    width: 600px;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+}
+.act-dis{
+    display: flex;
+    gap: 110px;
+}
+.ac-head p{
+    font-size: 14 px;
+    color:gray ;
+}
+.btn3{
+    padding: 10px 20px;
+}
+.ac-img{
+    height: 170px;
+    width: 210px;
+    border-radius: 20%;
+}
+
+
+/*----follower section----*/
+.follower{
+    display: flex;
+    justify-content: center;
+}
+.followersec{
+    width: 600px;
+    background-color: #e5e7ff;
+    border-radius: 15px;
+    text-align: center;
+    padding: 20px 30px;
+    margin: 0px 50px;
+
+}
+.user-main{
+    display: flex;
+    justify-content: space-around;
+}
+.user h1{
+    color: #4E47FF;
+    font-family: sans-serif;
+    font-size: 50px;
+    margin-bottom: -10px;
+    margin-top: 0px;
+}
+.user p{
+    font-size: 12px;
+    color: grey;
+}
+
+
+/*-----card section-----*/
+.card-class{
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
+    margin-bottom: 100px;
+}
+.card-sec{
+    width: 600px;
+    margin: 0px 50px;
+}
+.card-sec h1{
+    text-align: center;
+    margin-bottom: 25px;
+    font-size: 30px;
+}
+.card{
+    background-color: white;
+    border-radius: 10px;
+    margin-left: 10px;
+    padding: 20px 10px;
+}
+.card-inner{
+    width: 700px;
+    display: flex;
+    justify-content: space-around;
+   
+}
+.star1{
+    height: 10px;
+    margin-bottom: 0px;
+}
+.card h4{
+    font-size: 18px;
+    margin: 0px 5px;
+}
+.card p{
+    font-size: 10px;
+    margin: 5px;
+    color: grey;
+    padding: 0px 20px 0px 0px;
+}
+.card-img-set{
+    display: flex;
+}
+.com-dit h5{
+    margin: 5px;
+    padding: 0px;
+    color: rgb(43, 41, 41);
+    font-weight: 100;
+}
+.com-dit p{
+    margin: 5px;
+    padding: 0px;
+    color: grey;
+}
+.card-img1{
+    border-radius: 50%;
+    height: 30px;
+    margin-top: 5px;
+}
+.card:hover{
+    box-shadow: 8px 5px 2px rgb(238, 238, 238);
+    background-color: rgb(227, 239, 255);
+    transition: 0.5s;
+}
