--- a/Styles/style.css
+++ b/Styles/style.css
@@ -3,22 +3,12 @@
     font-optical-sizing: auto;
     font-weight: <weight>;
     font-style: normal;
-    
-    
-    /* font-family: "TikTok Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight:400;
-    font-style: normal;
-    font-variation-settings:
-      "slnt" 0,
-      "wdth" 100; */
   }
 
   body{
     background-color: #f5f8ff;
     margin:  auto;
     font-family: Raleway;
-    /* font-family: sans-serif; */
     font-weight: 400;
 }
 button{
@@ -33,7 +23,6 @@ button:hover{
 
 
 /* primary class*/
-
 .primary-button{
     background-color: #4E47FF;
     color: white;
@@ -57,6 +46,7 @@ nav{
   margin: 10px 40px;
   }
 .signup{
+    font-family: Raleway;
     padding: 10px 20px;
     height: 40px;
     margin: 20px 40px;
@@ -84,6 +74,7 @@ nav{
     justify-content: center;
 }
 .stayfocused{
+    font-family: Raleway;
     padding: 10px 15px;
     display: block;
 }
@@ -110,6 +101,7 @@ nav{
 }
 .btn3{
     padding: 10px 20px;
+    font-family : Raleway;
 }
 .ac-img{
     height: 170px;
@@ -217,8 +209,8 @@ nav{
 }
 
 
-  /*-----focus section----*/
-  .fc-main{
+/*-----focus section----*/
+.fc-main{
     display: flex;
     justify-content: center;
 }
@@ -242,7 +234,7 @@ nav{
     color: gray;
 }
 .focus-btn{
-   
+    font-family: Raleway;
     text-align: center;
     padding: 10px 24px;
     margin-bottom: 20px;
@@ -286,6 +278,7 @@ nav{
     border-radius: 5px;
 }
 .form-btn{
+    font-family: Raleway;
     height: 35px;
     width: 255px;
     margin-top: 10px;
@@ -297,7 +290,7 @@ textarea{
     resize: none;
 }
 
-/*-------foooter section*/
+/*<----foooter section---->*/
 
 .foot-main{
     display: flex;
